--- a/FrontPage revisi.html
+++ b/FrontPage revisi.html
@@ -20,8 +20,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/style sm.css" />
+    <link rel="stylesheet" href="FrontPage/css/nav.css" />
+    <link rel="stylesheet" href="FrontPage/css/style sm.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
@@ -64,11 +64,11 @@
 
     <title>Front Page</title>
   </head>
-  <body style="background-image: url(icon/corporate2.png); background-size: cover; background-repeat: no-repeat; background-attachment: fixed">
+  <body style="background-image: url(FrontPage/icon/corporate2.png); background-size: cover; background-repeat: no-repeat; background-attachment: fixed">
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid" style="width: 95%">
-        <a class="navbar-brand" href="#"><img class="ray-logo" src="icon/logo white 1edited.png" alt="Rayspeed logo" /></a>
+        <a class="navbar-brand" href="#"><img class="ray-logo" src="FrontPage/icon/logo white 1edited.png" alt="Rayspeed logo" /></a>
         <li class="nav-item dropdown ms-auto d-flex align-items-center d-lg-none d-xl-none" style="list-style: none">
           <a class="navbar-brand" href="#" data-bs-toggle="modal" data-bs-target=".feedback">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -128,7 +128,7 @@
               </ul>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
-              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="icon/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
+              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="FrontPage/icon/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
               <ul class="dropdown-menu animate slideIn">
                 <li><a class="dropdown-item fw-bolder" href="logout.php">Logout</a></li>
               </ul>
@@ -1018,8 +1018,8 @@
         });
       });
     </script>
-    <script src="js/script.js"></script>
-    <script src="js/jfcc.js"></script>
+    <script src="FrontPage/js/script.js"></script>
+    <script src="FrontPage/js/jfcc.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
