update for mobile

--- a/1.1.2 CreateShipment.html
+++ b/1.1.2 CreateShipment.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="1.1.2 Create Shipment/css/scrollspy.css" />
     <link rel="stylesheet" href="1.1.2 Create Shipment/css/style.css" />
     <link rel="stylesheet" href="1.1.2 Create Shipment/css/nav.css" />
+    <link rel="stylesheet" href="1.1.2 Create Shipment/css/mobile.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 
