--- a/1.1.1.International.html
+++ b/1.1.1.International.html
@@ -615,9 +615,9 @@
 
     <!-- Optional JavaScript; choose one of the two! -->
 
-    <script src="js/jfcc.js"></script>
-    <script src="js/cloner.js"></script>
-    <script src="js/script.js"></script>
+    <script src="1.1.1 RJM & JFCC/js/jfcc.js"></script>
+    <script src="1.1.1 RJM & JFCC/js/cloner.js"></script>
+    <script src="1.1.1 RJM & JFCC/js/script.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
