--- a/1.1.2 CreateShipment.html
+++ b/1.1.2 CreateShipment.html
@@ -1178,9 +1178,9 @@
 
     <!-- JS -->
 
-    <script src="js/jfcc.js"></script>
-    <script src="js/scrollspy.js"></script>
-    <script src="js/script.js"></script>
+    <script src="1.1.2 Create Shipment/js/jfcc.js"></script>
+    <script src="1.1.2 Create Shipment/js/scrollspy.js"></script>
+    <script src="1.1.2 Create Shipment/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
