--- a/1.1.1.International.html
+++ b/1.1.1.International.html
@@ -124,14 +124,14 @@
     <!-- NAV -->
 
     <div class="container-fluid" style="width: 95%">
-      <p style="font-size: 36px; margin-top: 75px">Rate Simulation</p>
+      <p class="title">Rate Simulation</p>
 
       <!-- RJM -->
       <section>
         <div>
-          <p class="col-6 text-center mb-5" style="font-size: 32px; margin-top: 50px; background-color: #ffcc01; color: #d70512; border-radius: 5px">Rayspeed Jalur Mancanegara Worldwide (<span style="color: #172b85">SOS</span>RJM)</p>
+          <p class="col-6 text-center header1 mb-5">Rayspeed Jalur Mancanegara Worldwide (<span style="color: #172b85">SOS</span>RJM)</p>
           <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">Destination</label>
+            <label class="col-2 col-form-label f27">Destination</label>
             <div class="col-3">
               <select class="form-control select2" id="destination_rjm" name="destination_rjm" tabindex="-1" style="width: 100%" required>
                 <option value="" disabled selected>Choose Destination</option>
@@ -375,19 +375,19 @@
             </div>
           </div>
           <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">City</label>
+            <label class="col-2 col-form-label f27">City</label>
             <div class="col-3 my-auto">
               <input class="form-control" type="text" id="city_name" name="city_name" />
             </div>
           </div>
           <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">Zip Code</label>
+            <label class="col-2 col-form-label f27">Zip Code</label>
             <div class="col-3 my-auto">
               <input class="form-control" type="text" id="post_code" name="post_code" />
             </div>
           </div>
           <!-- <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">Type</label>
+            <label class="col-2 col-form-label f27">Type</label>
             <div class="col-3">
               <select class="form-select" id="service_rjm" name="service_rjm" style="font-size: 21px" required>
                 <option selected disabled>Choose Destination</option>
@@ -494,7 +494,7 @@
         <p class="col-5 text-center mb-3" style="font-size: 32px; margin-top: 50px; background-color: #ea1616; color: white; border-radius: 5px">Japan First Class Courier (JFCC)</p>
         <p class="col-4 mb-5 ps-2" style="color: #ea1616">JFCC is only for shipment with weight 45 kgs and above, otherwise please use SOSRJM Service</p>
         <div class="row mb-3">
-          <label class="col-2 col-form-label" style="font-size: 27px">Services</label>
+          <label class="col-2 col-form-label f27">Services</label>
           <div class="col-3">
             <select class="form-select" style="font-size: 21px" id="jfcc_type" name="jfcc_type">
               <option selected disabled>Choose Service</option>
@@ -504,7 +504,7 @@
           </div>
         </div>
         <div class="row mb-3">
-          <label class="col-2 col-form-label" style="font-size: 27px">Destination</label>
+          <label class="col-2 col-form-label f27">Destination</label>
           <div class="col-3">
             <select class="form-select" id="destination_jfcc" name="destination_jfcc" style="font-size: 21px" required>
               <option selected disabled>Choose Destination</option>
@@ -512,7 +512,7 @@
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-2 col-form-label flight" style="font-size: 27px">Flight</div>
+          <div class="col-2 col-form-label flight f27">Flight</div>
           <div class="col-3 flight">
             <select class="form-select" id="flight" name="flight" style="font-size: 21px" required>
               <option selected disabled>Choose Flight</option>
