--- a/1.1.1.AirCargo.html
+++ b/1.1.1.AirCargo.html
@@ -100,7 +100,7 @@
       <!-- Air Cargo -->
       <section>
         <div>
-          <p class="mb-4 mt-5 header">Air Cargo</p>
+          <p class="mb-4 mt-3 mt-lg-5 header">Air Cargo</p>
           <div class="row mb-3">
             <label class="col-lg-2 col-md-3 col-form-label label">Country</label>
             <div class="col-lg-3 col-md-4">
@@ -171,44 +171,44 @@
               <div class="card card-result">
                 <div class="card-body font-result">
                   <div class="row">
-                    <div class="col-sm-5">Country</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Country</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Airport</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Airport</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Flight</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Flight</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Weight</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Weight</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Volume</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Volume</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Chargeable Weight (Kg)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Chargeable Weight (Kg)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Total Projection charges (before tax)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Total Projection charges (before tax)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Total Projection charges (after tax)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Total Projection charges (after tax)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                 </div>
               </div>
@@ -217,7 +217,7 @@
               <!-- <div class="col-2">
             <button type="button" class="btn" style="width: 290px; height: 50px; font-size: 24px">Simulate Again</button>
           </div> -->
-              <div class="text-center text-sm-start col-md-5 col-lg-2">
+              <div class="text-center col-md-5 col-lg-2">
                 <button type="button" class="btn print-btn" onclick="printDiv('print')">Print</button>
               </div>
             </div>
