--- a/1.1.1.AirCargo.html
+++ b/1.1.1.AirCargo.html
@@ -218,7 +218,7 @@
             <button type="button" class="btn" style="width: 290px; height: 50px; font-size: 24px">Simulate Again</button>
           </div> -->
               <div class="text-center col-md-5 col-lg-2">
-                <button type="button" class="btn print-btn" onclick="printDiv('print')">Print</button>
+                <button type="button" class="btn print-btn mb-3" onclick="printDiv('print')">Print</button>
               </div>
             </div>
           </div>
