--- a/1.1.1.Domestic.html
+++ b/1.1.1.Domestic.html
@@ -86,7 +86,7 @@
               </ul>
             </li>
             <li class="nav-item my-auto mx-4 dropdown">
-              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img src="Front Page/icon/ikon-pala.png" alt="login icon" style="width: 50px" /></a>
+              <a class="nav-link dropdown-togglex" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"><img class="login-icon" src="Front Page/icon/ikon-pala.png" alt="login icon" /></a>
               <ul class="dropdown-menu animate slideIn">
                 <li><a class="dropdown-item fw-bolder" href="index.html">Logout</a></li>
               </ul>
@@ -98,30 +98,30 @@
     <!-- NAV -->
 
     <div class="container-fluid" style="width: 95%">
-      <p style="font-size: 36px; margin-top: 75px">Rate Simulation</p>
+      <p class="title">Rate Simulation</p>
 
       <!-- Domestik -->
       <section>
         <div>
-          <p class="mb-4 mt-5" style="font-size: 32px">Domestic Service</p>
+          <p class="mb-4 mt-3 mt-lg-5 header">Domestic Service</p>
           <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">Service Type</label>
-            <div class="col-3">
+            <label class="col-lg-2 col-md-3 col-form-label label">Service Type</label>
+            <div class="col-lg-3 col-md-4">
               <select id="air-cargo-country" name="country" class="form-select" required>
                 <option value="DORS">REGULAR</option>
               </select>
             </div>
           </div>
           <div class="row mb-3">
-            <label class="col-2 col-form-label" style="font-size: 27px">Destination</label>
-            <div class="col-3 my-auto">
+            <label class="col-lg-2 col-md-3 col-form-label label">Destination</label>
+            <div class="col-lg-3 col-md-4 my-auto">
               <input type="text" id="destination" name="destination" class="form-control" required />
             </div>
           </div>
           <!-- SIMULATE Domestik -->
           <div class="row disini pt-3">
-            <div class="col-3 g-0">
-              <div class="card my-1 mx-1" style="border-radius: 20px; border-top: none; box-shadow: 0 8px 8px 0px rgba(0, 0, 0, 0.45)">
+            <div class="col-lg-3 col-md-6 g-0">
+              <div class="card my-1 mx-1 card-calculate">
                 <div class="card-body">
                   <div class="row pb-2">
                     <div class="col"><h5 class="card-title fw-bold pb-3">Package</h5></div>
@@ -140,60 +140,60 @@
           </div>
           <!-- SIMULATE Domestik -->
           <div class="row pt-3">
-            <div class="col-2"><button type="button" class="btn" id="calculate" style="background-color: #699bf7; color: white; width: 290px; height: 50px; font-size: 24px">Calculate</button></div>
-            <div class="col-2"><button type="button" class="btn tambah" style="border-width: 2px; border-color: #699bf7; color: #699bf7; width: 290px; height: 50px; font-size: 24px">Add Package</button></div>
+            <div class="text-center text-sm-start col-md-5 col-lg-2 pb-1"><button type="button" class="btn" id="calculate">Calculate</button></div>
+            <div class="text-center text-sm-start col-md-5 col-lg-2"><button type="button" class="btn tambah">Add Package</button></div>
           </div>
         </div>
         <div class="row">
-          <div class="col-8">
+          <div class="col-lg-8">
             <div class="row pt-5" id="print">
-              <label style="font-size: 36px">Result</label>
-              <div class="card" style="border-width: 3px; border-color: black">
-                <div class="card-body" style="font-size: 21px">
+              <label class="header">Result</label>
+              <div class="card card-result">
+                <div class="card-body card-font">
                   <div class="row">
-                    <div class="col-sm-5">Destination</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Destination</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Actual Weight</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Actual Weight</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Actual Volume</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Actual Volume</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Chargeable Weight (Kg)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Chargeable Weight (Kg)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Freight Charges</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Freight Charges</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2 mb-2">
-                    <div class="col-sm-5">Surcharge (...%)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Surcharge (...%)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Total Projection charges (before tax)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Total Projection charges (before tax)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Total Projection charges (after tax)</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Total Projection charges (after tax)</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                   <div class="row pt-2">
-                    <div class="col-sm-5">Lead Time</div>
-                    <div class="col-sm-1">:</div>
-                    <div class="col-sm" id="" name=""></div>
+                    <div class="col-md-5">Lead Time</div>
+                    <div class="col-md-1">:</div>
+                    <div class="col-md" id="" name=""></div>
                   </div>
                 </div>
               </div>
@@ -202,8 +202,8 @@
               <!-- <div class="col-2">
             <button type="button" class="btn" style="width: 290px; height: 50px; font-size: 24px">Simulate Again</button>
           </div> -->
-              <div class="col-2">
-                <button type="button" class="btn" onclick="printDiv('print')" style="background-color: #03aa6f; color: white; width: 290px; height: 50px; font-size: 24px">Print</button>
+              <div class="text-center col-md-5 col-lg-2">
+                <button type="button " class="btn print-btn" onclick="printDiv('print')">Print</button>
               </div>
             </div>
           </div>
