--- a/1.1.1.Domestic.html
+++ b/1.1.1.Domestic.html
@@ -202,7 +202,7 @@
               <!-- <div class="col-2">
             <button type="button" class="btn" style="width: 290px; height: 50px; font-size: 24px">Simulate Again</button>
           </div> -->
-              <div class="text-center col-md-5 col-lg-2">
+              <div class="text-center col-md-5 col-lg-2 mb-3">
                 <button type="button " class="btn print-btn" onclick="printDiv('print')">Print</button>
               </div>
             </div>
