--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="Login Page/css/login.css" />
+    <link rel="stylesheet" href="css/login.css" />
 
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,9 +21,9 @@
       <div class="row">
         <div class="col-lg-8 col-xl-8 g-0">
           <a href="#">
-            <img src="Login Page/logo-white.png" class="img-fluid d-block mx-auto logo-login" alt="Logo Rayspeed" />
+            <img src="images/rayspeed-logo.png" class="img-fluid d-block mx-auto logo-login" alt="Logo Rayspeed" />
           </a>
-          <img src="Login Page/hero-login.png" class="img-fluid d-block mx-auto" style="position: relative" />
+          <img src="images/hero-login.png" class="img-fluid d-block mx-auto" style="position: relative" />
         </div>
         <div class="col-lg-4 col-xl-4 mt-5">
           <div class="container-fluid">
@@ -42,8 +42,8 @@
                 <a href="FrontPage.html"><button type="submit" class="btn btn-login">Login</button></a>
               </div>
               <!-- </form> -->
-              <div class="row mt-5 text-center g-0"><a href="#" class="anchor-registration">Daftar Speedship Corporate? Di sini!</a></div>
-              <div class="row mt-3 text-center g-0"><a href="#" class="anchor-forget">Lupa Passowrd?</a></div>
+              <div class="row mt-5 text-center g-0"><a href="registration.php" class="anchor-registration">Daftar Speedship Corporate? Di sini!</a></div>
+              <div class="row mt-3 text-center g-0"><a href="forgot_password.php" class="anchor-forget">Lupa Passowrd?</a></div>
             </div>
           </div>
         </div>
