update create shipment

--- a/1.1.2 CreateShipment.html
+++ b/1.1.2 CreateShipment.html
@@ -664,7 +664,8 @@
                   <div class="col my-auto tampil-tiga text-danger">Insurance Charges 0.35% of Invoice or Minimum IDR 250.000</div>
                 </div>
               </div>
-              <div class="ps-lg-5 ps-md-3 ps-1" class="hide">
+              <!-- <div class="" id="append"></div> -->
+              <div class="ps-lg-5 ps-md-3 ps-1 hide" id="append_insurance">
                 <label for="" class="pb-2">
                   E. Insurance by Shipper<span style="color: red">*</span>
                   <button type="button" class="btn btn-white pb-2" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="Enter the Insurance Cost as Per Certificate">
@@ -693,14 +694,6 @@
                   </div>
                 </div>
               </div>
-
-              <!-- HIDE -->
-              <div class="ps-lg-5 ps-md-3 ps-1" id="hide">
-                <!-- <div class="row col-lg-8 pb-4">
-              <input class="form-control" type="file" id="upload_insurance" name="upload_insurance" />
-            </div> -->
-              </div>
-              <!-- HIDE -->
             </section>
             <!-- 6 -->
             <!-- 7 -->
@@ -782,7 +775,7 @@
                   </button>
                 </label>
                 <div class="row pb-3">
-                  <div class="col-sm-2"><input type="time" id="time_pickup" name="time_pickup" class="form-control timepicker" /></div>
+                  <div class="col-6 col-sm-4 col-md-4 col-lg-2"><input type="time" id="time_pickup" name="time_pickup" class="form-control timepicker" /></div>
                 </div>
               </div>
               <div class="ps-lg-5 ps-md-3 ps-1">
