--- a/1.1.2 CreateShipment.html
+++ b/1.1.2 CreateShipment.html
@@ -661,7 +661,7 @@
                       <option value="No">No</option>
                     </select>
                   </div>
-                  <div class="col my-auto tampil-tiga text-danger">Insurance Charges 0.35% of Invoice or Minimum IDR 250.000</div>
+                  <div class="col my-auto tampil-tiga text-danger mt-2">Insurance Charges 0.35% of Invoice or Minimum IDR 250.000</div>
                 </div>
               </div>
               <!-- <div class="" id="append"></div> -->
