--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <input type="password" name="login_password" class="form-control input-login" id="password" />
               </div>
               <div class="mt-4 d-flex justify-content-center">
-                <a href="FrontPage.html"><button type="submit" class="btn btn-login">Login</button></a>
+                <a href="home.html"><button type="submit" class="btn btn-login">Login</button></a>
               </div>
               <!-- </form> -->
               <div class="row mt-5 text-center g-0"><a href="registration.php" class="anchor-registration">Daftar Speedship Corporate? Di sini!</a></div>
